--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+      "react-app" 
+    ],
+    "rules":{
+      "no-undef" :  "off" ,
+      "no-restricted-globals" :  "off" ,
+      "no-unused-vars" :  "off"
+    }
   },
   "browserslist": {
     "production": [
